--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <canvas id="app"></canvas>
-    <script type="module" src="./view/main.js"></script>
+    <div id="app"></div>
+    <script type="module" src="./view/main.js" ></script>
   </body>
 </html>
